--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css" />
   <script src="bower_components/fullpage.js/jquery.fullPage.js"></script>
   <script src="bower_components/jquery-countTo/jquery.countTo.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy|Cabin:400,400italic' rel='stylesheet' type='text/css'>
   <link href='css/style.css' rel='stylesheet'/>
 </head>
 <body>
